sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:17: error: ';' expected but integer literal found.
        echange(i+1,i+1)       dbt+=1
                                    ^